# ai-dev-template

./: .env.example  .gitignore  CLAUDE.md  Makefile  ONBOARDING.md  README.md  pyproject.toml
.claude/: hookify.branch-protection.local.md  hookify.credential-protection.local.md  hookify.dangerous-commands.local.md  hookify.env-safety.local.md  hookify.validate-before-stop.local.md  launch.json  settings.json
.context/: STATE.md
docs/: architecture.md  guide.md  session-protocol.md
tests/: conftest.py
